# cinema-app

./: README.md  pyproject.toml
cinema_project/: celery.py  settings.py  urls.py
movies/: models.py  tasks.py  test.py  urls.py
movies/api/v1/: view.py
movies/migrations/: 0001_initial.py
tests/: test_cinema_app.py
